Kuberneetes-Deployment/ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: app-ingress
  annotations:
    cert-manager.io/isuuer: "letsencrypt-prod"
spec:
  rules:
  - host: "myapp.example.com"
    http :
      paths:
      - path: /
        pathType: prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80   
  tls:
  - hosts:
    - "myapp.example.com"
    secreteName: myapp-tls
